--- a/HomePage1/style.css
+++ b/HomePage1/style.css
@@ -8,20 +8,61 @@ ul{
     padding: 0;
 }
 
+.container{
+    max-width: 1180px;
+    margin: auto;
+    padding: 0 16px;
+    background-color: aqua;
+}
+
 header{
     background-color: #f1f1f1;
-    box-shadow: 0px 4px 18px 1px rgba(0,0,0,0.75);
+    box-shadow: 0px 0.2px 20px 0px rgba(0,0,0,0.75);
     height: 80px;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+
+}
+
+header .container{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    height: 100%;
 }
 
 header .logo{
+    display: inline-block;
 
 }
 
 header nav{
+    display: inline-block;
 
 }
 
+header nav ul {
+    margin: 0;
+    padding: 0;
+}
+
 header nav ul li{
+    display: inline-block;
+
+}
+
+header nav ul li a{
+    color: rgb(46, 46, 46);
+    font-size: 16px;
+    letter-spacing: 0.27;
+    margin-right: 24px ;
+    text-decoration: none;
+
+}
+
+header nav ul li:last-of-type a{
+    margin: 0;
 
 }
